--- a/vignettes/ChineseVersion_Diagnosis.Rmd
+++ b/vignettes/ChineseVersion_Diagnosis.Rmd
@@ -194,8 +194,8 @@ IcdDxShortToDecimal(sampleDxFile,ICD,Date,"2015/10/01")$Error
 ICD-9-CM 和 ICD-10-CM 的ccs單一階層一致: 共260種
 ```
 ## ICD to CCS description
-CCS_category <- IcdDxToCCS(sampleDxFile, ID, ICD, Date, "2015-10-01", TRUE)
-head(CCS_category$groupedDf,5)
+CCS_description <- IcdDxToCCS(sampleDxFile, ID, ICD, Date, "2015-10-01", TRUE)
+head(CCS_description$groupedDf,5)
 #>       Short ID    ICD       Date           CCS_CATEGORY_DESCRIPTION
 #>   1:   5533  C  553.3 2008-04-03                   Abdominal hernia
 #>   2:   5533  A  553.3 2008-05-01                   Abdominal hernia
@@ -203,7 +203,7 @@ head(CCS_category$groupedDf,5)
 #>   4:  55320  B 553.20 2007-08-29                   Abdominal hernia
 #>   5:   5533  A  553.3 2008-06-27                   Abdominal hernia
 
-head(CCS_category$groupedData_Long,5)
+head(CCS_description$groupedData_Long,5)
 #>     ID   CCS_CATEGORY_DESCRIPTION  firstCaseDate endCaseDate count    period
 #>  1:  C           Abdominal hernia     2008-04-03  2018-12-28     2 3921 days
 #>  2:  A           Abdominal hernia     2008-05-01  2018-12-28     4 3893 days
@@ -212,7 +212,7 @@ head(CCS_category$groupedData_Long,5)
 #>  5:  A           Acute bronchitis     2009-06-09  2009-06-09     1    0 days
 
 ## ICD to CCS category
-CCS_description <- IcdDxToCCS(sampleDxFile, ID, ICD, Date, "2015-10-01", FALSE)
+CCS_category <- IcdDxToCCS(sampleDxFile, ID, ICD, Date, "2015-10-01", FALSE)
 ```
 
 **2) CCS多階層分類**
@@ -224,8 +224,8 @@ ICD-9-CM 共 4個階層 (Level 1~4)
 ICD-10-CM 共 2個階層 (Level 1~2)
 ```
 ## ICD to CCS multiple level 2 description
-CCSlvl_category <- IcdDxToCCSLvl(sampleDxFile, ID, ICD, Date, "2015-10-01",2, TRUE)
-head(CCS_category$groupedDf,5)
+CCSlvl_description <- IcdDxToCCSLvl(sampleDxFile, ID, ICD, Date, "2015-10-01",2, TRUE)
+head(CCSlvl_description$groupedDf,5)
 #>       Short ID    ICD       Date      CCS_LVL_2_LABEL
 #>   1:   5533  C  553.3 2008-04-03     Abdominal hernia
 #>   2:   5533  A  553.3 2008-05-01     Abdominal hernia
@@ -233,7 +233,7 @@ head(CCS_category$groupedDf,5)
 #>   4:  55320  B 553.20 2007-08-29     Abdominal hernia
 #>   5:   5533  A  553.3 2008-06-27     Abdominal hernia
 
-head(CCS_category$groupedData_Long,5)
+head(CCSlvl_description$groupedData_Long,5)
 #>     ID                                       CCS_LVL_2_LABEL firstCaseDate endCaseDate count     period
 #>  1:  C                                      Abdominal hernia    2008-04-03  2018-12-28     2  3921 days
 #>  2:  A                                      Abdominal hernia    2008-05-01  2018-12-28     4  3893 days
@@ -242,7 +242,7 @@ head(CCS_category$groupedData_Long,5)
 #>  5:  A                                Respiratory infections    2009-06-09  2009-06-09     1     0 days
 
 ## ICD to CCS multiple level 3 category
-CCSlvl_description <- IcdDxToCCSLvl(sampleDxFile, ID, ICD, Date, "2015-10-01",3, FALSE)
+CCSLvl_category <- IcdDxToCCSLvl(sampleDxFile, ID, ICD, Date, "2015-10-01",3, FALSE)
 ```
 ###二、Phecode
 由 Vanderbilt University Medical Center 開發的 PheWAS 工具, PheWAS套件使用自訂的phecode定義ICD-9-CM code的編碼分組，約一萬多筆的ICD-9-CM code診斷碼分為共1,866種較大的phecode分類，ICD-9-CM和phecode為多對多的配對關係。
