--- a/vignettes/ChineseVersion_Diagnosis.Rmd
+++ b/vignettes/ChineseVersion_Diagnosis.Rmd
@@ -385,7 +385,7 @@ head(AHRQ$groupedData_Long,5)
 ```
 **2) Charlson**
 
-Charlson database共病症測量指標的是基於Halfon和 Quan's的版本, 使 ICD code 依其相關的共病症做分類
+Charlson database共病症測量指標的是基於Quan的Charlson Comorbidity Index版本, 使 ICD code 依其相關的共病症做分類
 
 ICD-9-CM 及 ICD-10-CM 的 Charlson 共病症種類一致, 共17種
 
