--- a/vignettes/ChineseVersion_Procedure.Rmd
+++ b/vignettes/ChineseVersion_Procedure.Rmd
@@ -14,6 +14,12 @@ vignette: >
 ```
 cat(utils::packageDescription("emr")$Description)
 ```
+### 安裝套件
+```r
+# Install development version from GitHub
+devtools::install_github("DHLab-CGU/emr")
+library(emr)
+```
 ### ICD-PCS-CODE 格式對照
 產生 ICD-9-PCS 的兩種格式的表格: Decimal 和 Short 
 
